tests/NormalTests/paczka1/fuzzy1/12443780.err
Error in line 5: 0sgt9m2Gjz A253 73,5
Error in line 6: 0sgt9m2Gjz S129 12,6
Error in line 9: tRIAxFgkn6 S752 28,9
Error in line 13: XFBOtwKLYGW S129 52,4
Error in line 31: 1RwgAg S129 30,4
Error in line 33: JxnZLoo S752 92,3
